--- a/JesperHelloTriangleDx12/JesperHelloTriangleDx12/JesperHelloTriangleDx12.vcxproj
+++ b/JesperHelloTriangleDx12/JesperHelloTriangleDx12/JesperHelloTriangleDx12.vcxproj
@@ -128,9 +128,13 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="Main.cpp" />
+    <ClCompile Include="Renderer.cpp" />
+    <ClCompile Include="Triangle.cpp" />
     <ClCompile Include="Window.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Renderer.h" />
+    <ClInclude Include="Triangle.h" />
     <ClInclude Include="Window.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
